boilerplate and reading in df

--- a/hw1/get_data.ipynb
+++ b/hw1/get_data.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "363.56s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
-      "--2023-09-05 16:00:36--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train.dat\n",
+      "403.74s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "--2023-09-05 16:01:16--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -19,11 +19,11 @@
       "Length: 11246 (11K)\n",
       "Saving to: ‘./train/train.dat’\n",
       "\n",
-      "     0K ..........                                            100% 9.45M=0.001s\n",
+      "     0K ..........                                            100% 5.76M=0.002s\n",
       "\n",
-      "2023-09-05 16:00:36 (9.45 MB/s) - ‘./train/train.dat’ saved [11246/11246]\n",
+      "2023-09-05 16:01:16 (5.76 MB/s) - ‘./train/train.dat’ saved [11246/11246]\n",
       "\n",
-      "--2023-09-05 16:00:36--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train2.dat\n",
+      "--2023-09-05 16:01:16--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train2.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -32,11 +32,11 @@
       "Length: 10445 (10K)\n",
       "Saving to: ‘./train/train2.dat’\n",
       "\n",
-      "     0K ..........                                            100% 5.35M=0.002s\n",
+      "     0K ..........                                            100% 3.78M=0.003s\n",
       "\n",
-      "2023-09-05 16:00:36 (5.35 MB/s) - ‘./train/train2.dat’ saved [10445/10445]\n",
+      "2023-09-05 16:01:16 (3.78 MB/s) - ‘./train/train2.dat’ saved [10445/10445]\n",
       "\n",
-      "--2023-09-05 16:00:36--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train3.dat\n",
+      "--2023-09-05 16:01:16--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train3.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -45,11 +45,11 @@
       "Length: 10445 (10K)\n",
       "Saving to: ‘./train/train3.dat’\n",
       "\n",
-      "     0K ..........                                            100% 6.30M=0.002s\n",
+      "     0K ..........                                            100% 3.28M=0.003s\n",
       "\n",
-      "2023-09-05 16:00:36 (6.30 MB/s) - ‘./train/train3.dat’ saved [10445/10445]\n",
+      "2023-09-05 16:01:16 (3.28 MB/s) - ‘./train/train3.dat’ saved [10445/10445]\n",
       "\n",
-      "--2023-09-05 16:00:36--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train4.dat\n",
+      "--2023-09-05 16:01:16--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/train4.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -58,24 +58,23 @@
       "Length: 11246 (11K)\n",
       "Saving to: ‘./train/train4.dat’\n",
       "\n",
-      "     0K ..........                                            100% 1.32M=0.008s\n",
+      "     0K ..........                                            100% 6.48M=0.002s\n",
       "\n",
-      "2023-09-05 16:00:36 (1.32 MB/s) - ‘./train/train4.dat’ saved [11246/11246]\n",
+      "2023-09-05 16:01:16 (6.48 MB/s) - ‘./train/train4.dat’ saved [11246/11246]\n",
       "\n",
-      "129.110.131.21\n",
-      "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
+      "connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 11246 (11K)\n",
       "Saving to: ‘./train/train4.dat’\n",
       "\n",
-      "     0K ..........                                            100% 1.32M=0.008s\n",
+      "     0K ..........                                            100% 6.48M=0.002s\n",
       "\n",
-      "2023-09-05 16:00:36 (1.32 MB/s) - ‘./train/train4.dat’ saved [11246/11246]\n",
+      "2023-09-05 16:01:16 (6.48 MB/s) - ‘./train/train4.dat’ saved [11246/11246]\n",
       "\n",
-      "369.02s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
-      "--2023-09-05 16:00:41--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test.dat\n",
+      "409.16s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "--2023-09-05 16:01:21--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -84,11 +83,11 @@
       "Length: 2888 (2.8K)\n",
       "Saving to: ‘./test/test.dat’\n",
       "\n",
-      "     0K ..                                                    100% 52.0M=0s\n",
+      "     0K ..                                                    100% 43.0M=0s\n",
       "\n",
-      "2023-09-05 16:00:41 (52.0 MB/s) - ‘./test/test.dat’ saved [2888/2888]\n",
+      "2023-09-05 16:01:21 (43.0 MB/s) - ‘./test/test.dat’ saved [2888/2888]\n",
       "\n",
-      "--2023-09-05 16:00:41--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test2.dat\n",
+      "--2023-09-05 16:01:21--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test2.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -97,11 +96,11 @@
       "Length: 2645 (2.6K)\n",
       "Saving to: ‘./test/test2.dat’\n",
       "\n",
-      "     0K ..                                                    100% 46.7M=0s\n",
+      "     0K ..                                                    100% 35.0M=0s\n",
       "\n",
-      "2023-09-05 16:00:41 (46.7 MB/s) - ‘./test/test2.dat’ saved [2645/2645]\n",
+      "2023-09-05 16:01:21 (35.0 MB/s) - ‘./test/test2.dat’ saved [2645/2645]\n",
       "\n",
-      "--2023-09-05 16:00:41--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test3.dat\n",
+      "--2023-09-05 16:01:21--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test3.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -110,11 +109,11 @@
       "Length: 2645 (2.6K)\n",
       "Saving to: ‘./test/test3.dat’\n",
       "\n",
-      "     0K ..                                                    100% 42.0M=0s\n",
+      "     0K ..                                                    100% 6.09M=0s\n",
       "\n",
-      "2023-09-05 16:00:41 (42.0 MB/s) - ‘./test/test3.dat’ saved [2645/2645]\n",
+      "2023-09-05 16:01:22 (6.09 MB/s) - ‘./test/test3.dat’ saved [2645/2645]\n",
       "\n",
-      "--2023-09-05 16:00:41--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test4.dat\n",
+      "--2023-09-05 16:01:22--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/test4.dat\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
@@ -123,85 +122,74 @@
       "Length: 2888 (2.8K)\n",
       "Saving to: ‘./test/test4.dat’\n",
       "\n",
-      "     0K ..                                                    100%  138M=0s\n",
+      "     0K ..                                                    100% 88.8M=0s\n",
       "\n",
-      "2023-09-05 16:00:41 (138 MB/s) - ‘./test/test4.dat’ saved [2888/2888]\n",
+      "2023-09-05 16:01:22 (88.8 MB/s) - ‘./test/test4.dat’ saved [2888/2888]\n",
       "\n",
+      "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
+      "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2888 (2.8K)\n",
       "Saving to: ‘./test/test4.dat’\n",
       "\n",
-      "     0K ..                                                    100%  138M=0s\n",
+      "     0K ..                                                    100% 88.8M=0s\n",
       "\n",
-      "2023-09-05 16:00:41 (138 MB/s) - ‘./test/test4.dat’ saved [2888/2888]\n",
+      "2023-09-05 16:01:22 (88.8 MB/s) - ‘./test/test4.dat’ saved [2888/2888]\n",
       "\n",
-      "374.45s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: output: File exists\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "--2023-09-05 16:00:47--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree.txt\n",
+      "414.58s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "--2023-09-05 16:01:27--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree.txt\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4165 (4.1K) [text/plain]\n",
-      "Saving to: ‘./output/tree.txt.1’\n",
+      "Saving to: ‘./output/tree.txt’\n",
       "\n",
-      "     0K ....                                                  100% 79.4M=0s\n",
+      "     0K ....                                                  100% 63.0M=0s\n",
       "\n",
-      "2023-09-05 16:00:47 (79.4 MB/s) - ‘./output/tree.txt.1’ saved [4165/4165]\n",
+      "2023-09-05 16:01:27 (63.0 MB/s) - ‘./output/tree.txt’ saved [4165/4165]\n",
       "\n",
-      "--2023-09-05 16:00:47--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree2.txt\n",
+      "--2023-09-05 16:01:27--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree2.txt\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 7653 (7.5K) [text/plain]\n",
-      "Saving to: ‘./output/tree2.txt.1’\n",
+      "Saving to: ‘./output/tree2.txt’\n",
       "\n",
-      "     0K .......                                               100% 6.11M=0.001s\n",
+      "     0K .......                                               100% 9.62M=0.001s\n",
       "\n",
-      "2023-09-05 16:00:47 (6.11 MB/s) - ‘./output/tree2.txt.1’ saved [7653/7653]\n",
+      "2023-09-05 16:01:27 (9.62 MB/s) - ‘./output/tree2.txt’ saved [7653/7653]\n",
       "\n",
-      "--2023-09-05 16:00:47--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree3.txt\n",
+      "--2023-09-05 16:01:27--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree3.txt\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 9057 (8.8K) [text/plain]\n",
-      "Saving to: ‘./output/tree3.txt.1’\n",
+      "Saving to: ‘./output/tree3.txt’\n",
       "\n",
-      "     0K ........                                              100% 38.4M=0s\n",
+      "     0K ........                                              100% 9.84M=0.001s\n",
       "\n",
-      "2023-09-05 16:00:47 (38.4 MB/s) - ‘./output/tree3.txt.1’ saved [9057/9057]\n",
+      "2023-09-05 16:01:27 (9.84 MB/s) - ‘./output/tree3.txt’ saved [9057/9057]\n",
       "\n",
-      "--2023-09-05 16:00:47--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree4.txt\n",
+      "--2023-09-05 16:01:27--  https://www.hlt.utdallas.edu/~vince/cs4375/assignments/hw1/tree4.txt\n",
       "Resolving www.hlt.utdallas.edu (www.hlt.utdallas.edu)... 129.110.131.21\n",
       "Connecting to www.hlt.utdallas.edu (www.hlt.utdallas.edu)|129.110.131.21|:443... connected.\n",
       "WARNING: cannot verify www.hlt.utdallas.edu's certificate, issued by ‘CN=InCommon RSA Server CA,OU=InCommon,O=Internet2,L=Ann Arbor,ST=MI,C=US’:\n",
       "  Unable to locally verify the issuer's authority.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 19791 (19K) [text/plain]\n",
-      "Saving to: ‘./output/tree4.txt.1’\n",
+      "Saving to: ‘./output/tree4.txt’\n",
       "\n",
-      "     0K .......... .........                                  100% 2.24M=0.008s\n",
+      "     0K .......... .........                                  100% 2.11M=0.009s\n",
       "\n",
-      "2023-09-05 16:00:47 (2.24 MB/s) - ‘./output/tree4.txt.1’ saved [19791/19791]\n",
+      "2023-09-05 16:01:27 (2.11 MB/s) - ‘./output/tree4.txt’ saved [19791/19791]\n",
       "\n"
      ]
     }
